--- a/op_chains_tracking/ch_gs_uploads.ipynb
+++ b/op_chains_tracking/ch_gs_uploads.ipynb
@@ -144,7 +144,16 @@
     "                query = query.replace(\"@block_time_sec@\", str(block_time_sec))\n",
     "                query = query.replace(\"@max_execution_secs@\", str(max_execution_secs))\n",
     "\n",
+    "\n",
     "                query = gsb.process_goldsky_sql(query)\n",
+    "\n",
+    "                #Save the query\n",
+    "                output_folder = os.path.join(\"outputs\", \"sql\")\n",
+    "                os.makedirs(output_folder, exist_ok=True)\n",
+    "                filename = f\"{chain_schema}_query.sql\"\n",
+    "                file_path = os.path.join(output_folder, filename)\n",
+    "                with open(file_path, 'w') as file:\n",
+    "                        file.write(query)\n",
     "\n",
     "                # Execute the query\n",
     "                result_df = client.query_df(query)\n",
