--- a/op_chains_tracking/ch_gs_uploads.ipynb
+++ b/op_chains_tracking/ch_gs_uploads.ipynb
@@ -97,6 +97,9 @@
     "# Get Chain List\n",
     "chain_configs = ops.get_superchain_metadata_by_data_source('oplabs') # OPLabs db\n",
     "\n",
+    "# if we want to filter for backfills\n",
+    "# chain_configs = chain_configs[chain_configs['blockchain'].isin(['swan','lisk'])]\n",
+    "\n",
     "chain_configs"
    ]
   },
