--- a/op_chains_tracking/clickhouse_builds/create_superchain_data_view.ipynb
+++ b/op_chains_tracking/clickhouse_builds/create_superchain_data_view.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import pandas as pd\n",
     "import sys\n",
-    "sys.path.append(\"../helper_functions\")\n",
+    "sys.path.append(\"../../helper_functions\")\n",
     "import clickhouse_utils as ch\n",
     "import opstack_metadata_utils as ops\n",
     "sys.path.pop()\n",
@@ -93,7 +93,11 @@
    "outputs": [],
    "source": [
     "view_slug = 'superchain'\n",
-    "dataset_types = ['transactions', 'traces', 'blocks', 'logs']\n",
+    "dataset_types = [\n",
+    "                # native\n",
+    "                'transactions', 'traces', 'blocks', 'logs',\n",
+    "                # mvs\n",
+    "                 'erc20_transfers_mv','eth_transfers_mv']\n",
     "chain_names = get_chain_names_from_df(chain_configs)\n",
     "print(chain_names)\n",
     "for dataset_type in dataset_types:\n",
@@ -117,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.-1"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
