--- a/op_chains_tracking/clickhouse_builds/create_transfers_mv.ipynb
+++ b/op_chains_tracking/clickhouse_builds/create_transfers_mv.ipynb
@@ -9,6 +9,7 @@
     "# List of materialized view names\n",
     "mv_names = [\n",
     "        'erc20_transfers',\n",
+    "        # 'erc721_transfers',\n",
     "        'eth_transfers',\n",
     "        ]"
    ]
@@ -232,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
