--- a/op_chains_tracking/clickhouse_builds/create_superchain_data_view.ipynb
+++ b/op_chains_tracking/clickhouse_builds/create_superchain_data_view.ipynb
@@ -101,7 +101,10 @@
     "chain_names = get_chain_names_from_df(chain_configs)\n",
     "print(chain_names)\n",
     "for dataset_type in dataset_types:\n",
-    "        create_clickhouse_view(view_slug, dataset_type, chain_names)"
+    "        try:\n",
+    "                create_clickhouse_view(view_slug, dataset_type, chain_names)\n",
+    "        except:\n",
+    "                print(f'Can not create view for {dataset_type}')"
    ]
   }
  ],
