--- a/op_chains_tracking/clickhouse_builds/create_transfers_mv.ipynb
+++ b/op_chains_tracking/clickhouse_builds/create_transfers_mv.ipynb
@@ -10,7 +10,8 @@
     "mv_names = [\n",
     "        'erc20_transfers',\n",
     "        'eth_transfers',\n",
-    "        ]"
+    "        ]\n",
+    "days_batch_size = 7"
    ]
   },
   {
@@ -138,7 +139,7 @@
     "def backfill_data(client, chain, mv_name):\n",
     "    full_view_name = f'{chain}_{mv_name}_mv'\n",
     "    current_date = start_date\n",
-    "    batch_size = datetime.timedelta(days=14)\n",
+    "    batch_size = datetime.timedelta(days=days_batch_size)\n",
     "\n",
     "    while current_date < end_date:\n",
     "        batch_end = min(current_date + batch_size, end_date)\n",
@@ -232,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
