--- a/op_chains_tracking/clickhouse_builds/create_superchain_data_view.ipynb
+++ b/op_chains_tracking/clickhouse_builds/create_superchain_data_view.ipynb
@@ -97,7 +97,7 @@
     "                # native\n",
     "                'transactions', 'traces', 'blocks', 'logs',\n",
     "                # mvs\n",
-    "                 'erc20_transfers_mv','eth_transfers_mv']\n",
+    "                 'erc20_transfers_mv','native_eth_transfers_mv']\n",
     "chain_names = get_chain_names_from_df(chain_configs)\n",
     "print(chain_names)\n",
     "for dataset_type in dataset_types:\n",
