--- a/op_chains_tracking/clickhouse_builds/create_superchain_data_view.ipynb
+++ b/op_chains_tracking/clickhouse_builds/create_superchain_data_view.ipynb
@@ -50,7 +50,7 @@
     "    return df['blockchain'].dropna().unique().tolist()\n",
     "\n",
     "# Function to create ClickHouse view\n",
-    "def create_clickhouse_view(view_slug, dataset_type, chain_names, client = None):\n",
+    "def create_clickhouse_view(view_slug, dataset_type, chain_names, client = None, do_is_deleted_line = True):\n",
     "    if client is None:\n",
     "        client = ch.connect_to_clickhouse_db()\n",
     "\n",
@@ -60,7 +60,7 @@
     "    for chain in chain_names:\n",
     "        table_name = f\"{chain}_{dataset_type}\"\n",
     "        if dataset_type == 'transactions':\n",
-    "            union_queries.append(f\"\"\"\n",
+    "            sql_query = f\"\"\"\n",
     "                                SELECT \n",
     "                                id, hash, nonce, block_hash, block_number, transaction_index, from_address, to_address\n",
     "                                , value, gas, gas_price, input, max_fee_per_gas, max_priority_fee_per_gas, transaction_type\n",
@@ -68,18 +68,22 @@
     "                                , receipt_status, receipt_l1_fee, receipt_l1_gas_used, receipt_l1_gas_price, receipt_l1_fee_scalar\n",
     "                                , receipt_l1_blob_base_fee, receipt_l1_blob_base_fee_scalar, blob_versioned_hashes, max_fee_per_blob_gas\n",
     "                                , receipt_l1_block_number, receipt_l1_base_fee_scalar, chain, network, chain_id, insert_time\n",
-    "                                FROM {table_name} WHERE is_deleted = 0\n",
-    "                                \"\"\")\n",
+    "                                FROM {table_name}\n",
+    "                                \"\"\"\n",
     "        else: \n",
-    "            union_queries.append(f\"\"\"\n",
+    "            sql_query = f\"\"\"\n",
     "                                SELECT \n",
     "                                *\n",
-    "                                FROM {table_name} WHERE is_deleted = 0\n",
-    "                                \"\"\")\n",
+    "                                FROM {table_name}\n",
+    "                                \"\"\"\n",
+    "        if do_is_deleted_line:\n",
+    "                sql_query += ' WHERE is_deleted = 0'\n",
+    "        # finalize query\n",
+    "        union_queries.append(sql_query)\n",
     "    \n",
     "    query += \" UNION ALL\\n\".join(union_queries)\n",
     "\n",
-    "    # print(query)\n",
+    "    print(query)\n",
     "    \n",
     "    client.command(query)\n",
     "\n",
@@ -93,16 +97,24 @@
    "outputs": [],
    "source": [
     "view_slug = 'superchain'\n",
-    "dataset_types = [\n",
+    "native_dataset_types = [\n",
     "                # native\n",
-    "                'transactions', 'traces', 'blocks', 'logs',\n",
+    "                # 'transactions', 'traces', 'blocks', 'logs',\n",
+    "]\n",
+    "mv_dataset_types = [\n",
     "                # mvs\n",
-    "                 'erc20_transfers_mv','native_eth_transfers_mv']\n",
+    "                 'erc20_transfers_mv','native_eth_transfers_mv'\n",
+    "                 ]\n",
+    "dataset_types = native_dataset_types + mv_dataset_types\n",
+    "print(dataset_types)\n",
     "chain_names = get_chain_names_from_df(chain_configs)\n",
     "print(chain_names)\n",
     "for dataset_type in dataset_types:\n",
+    "        is_deleted_line = True\n",
     "        try:\n",
-    "                create_clickhouse_view(view_slug, dataset_type, chain_names)\n",
+    "                if dataset_type in mv_dataset_types:\n",
+    "                        is_deleted_line = False\n",
+    "                create_clickhouse_view(view_slug, dataset_type, chain_names, do_is_deleted_line = is_deleted_line)\n",
     "        except:\n",
     "                print(f'Can not create view for {dataset_type}')"
    ]
