--- a/op_chains_tracking/clickhouse_builds/create_transfers_mv.ipynb
+++ b/op_chains_tracking/clickhouse_builds/create_transfers_mv.ipynb
@@ -282,7 +282,7 @@
    "outputs": [],
    "source": [
     "# # To reset a view\n",
-    "reset_materialized_view(client, 'zora', 'erc20_transfers')"
+    "# reset_materialized_view(client, 'zora', 'erc20_transfers')"
    ]
   },
   {
