--- a/op_chains_tracking/clickhouse_builds/create_superchain_data_view.ipynb
+++ b/op_chains_tracking/clickhouse_builds/create_superchain_data_view.ipynb
@@ -83,7 +83,7 @@
     "    \n",
     "    query += \" UNION ALL\\n\".join(union_queries)\n",
     "\n",
-    "    print(query)\n",
+    "    # print(query)\n",
     "    \n",
     "    client.command(query)\n",
     "\n",
@@ -99,7 +99,7 @@
     "view_slug = 'superchain'\n",
     "native_dataset_types = [\n",
     "                # native\n",
-    "                # 'transactions', 'traces', 'blocks', 'logs',\n",
+    "                'transactions', 'traces', 'blocks', 'logs',\n",
     "]\n",
     "mv_dataset_types = [\n",
     "                # mvs\n",
