--- a/op_governance_data/op_circulating_supply.ipynb
+++ b/op_governance_data/op_circulating_supply.ipynb
@@ -12,6 +12,7 @@
     "import sys\n",
     "sys.path.append(\"../helper_functions\")\n",
     "import duneapi_utils as du\n",
+    "import google_bq_utils as bqu\n",
     "sys.path.pop()\n",
     "\n",
     "# Define the CSV path and API URL\n",
@@ -55,7 +56,7 @@
     "        for i in range(1, delta.days + 1):\n",
     "            new_date = last_date_in_csv + timedelta(days=i)\n",
     "            new_date_str = new_date.strftime('%Y-%m-%d')\n",
-    "            df = df.append({'date': new_date_str, 'op_circulating_supply': current_supply}, ignore_index=True)\n",
+    "            df = pd.concat([df, pd.DataFrame({'date': [new_date_str], 'op_circulating_supply': [current_supply]})], ignore_index=True)\n",
     "\n",
     "    # Save the updated DataFrame back to CSV\n",
     "    df.to_csv(csv_path, index=False)\n",
@@ -114,6 +115,15 @@
     "du.write_dune_api_from_pandas(df, 'daily_op_circulating_supply',\\\n",
     "                             'Daily Snapshots of OP Token Circulating Supply, pulled from: https://static.optimism.io/tokenomics/circulatingSupply.txt')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bqu.write_df_to_bq_table(df, 'daily_op_circulating_supply')"
+   ]
   }
  ],
  "metadata": {
@@ -132,7 +142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
