--- a/op_collective_economics/get_op_collective_net_revenue_balances.ipynb
+++ b/op_collective_economics/get_op_collective_net_revenue_balances.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'../helper_functions'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import dotenv\n",
     "import os\n",
@@ -38,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,32 +112,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1572.4768197849344\n",
-      "2870.2974616715424\n",
-      "2534.0960646976373\n",
-      "21.185463890234463\n",
-      "300.3991134356917\n",
-      "4.406328376826346\n",
-      "309.78216569128017\n",
-      "121.95248974677227\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m2024-08-19 18:55:24.578\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mduneapi_utils\u001b[0m:\u001b[36mget_dune_data\u001b[0m:\u001b[36m58\u001b[0m - \u001b[1mResults available at https://dune.com/queries/3939869\u001b[0m\n",
-      "\u001b[32m2024-08-19 18:55:25.292\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mduneapi_utils\u001b[0m:\u001b[36mget_dune_data\u001b[0m:\u001b[36m105\u001b[0m - \u001b[1m✨ Results saved as outputs/l1_to_l2_inflight_withdrawals.csv, with 30 rows and 18 columns.\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "csv_filename = 'inputs/address_list.csv'  # Make sure this file exists in the same directory as your script\n",
     "addresses = read_addresses_from_csv(csv_filename)\n",
@@ -158,54 +124,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"l1_revenue_wallet_1\": {\n",
-      "    \"balance\": 1572.4768197849344,\n",
-      "    \"address\": \"0xa3d596EAfaB6B13Ab18D40FaE1A962700C84ADEa\"\n",
-      "  },\n",
-      "  \"l1_revenue_wallet_2\": {\n",
-      "    \"balance\": 2870.2974616715424,\n",
-      "    \"address\": \"0x391716d440C151C42cdf1C95C1d83A5427Bca52C\"\n",
-      "  },\n",
-      "  \"base_fee_split\": {\n",
-      "    \"balance\": 2534.0960646976373,\n",
-      "    \"address\": \"0x9c3631dDE5c8316bE5B7554B0CcD2631C15a9A05\"\n",
-      "  },\n",
-      "  \"op_sequencer_fee_vault\": {\n",
-      "    \"balance\": 21.185463890234463,\n",
-      "    \"address\": \"0x4200000000000000000000000000000000000011\"\n",
-      "  },\n",
-      "  \"op_base_fee_vault\": {\n",
-      "    \"balance\": 300.3991134356917,\n",
-      "    \"address\": \"0x4200000000000000000000000000000000000019\"\n",
-      "  },\n",
-      "  \"op_l1fee_fee_vault\": {\n",
-      "    \"balance\": 4.406328376826346,\n",
-      "    \"address\": \"0x420000000000000000000000000000000000001A\"\n",
-      "  },\n",
-      "  \"l1_batch_submitter\": {\n",
-      "    \"balance\": 309.78216569128017,\n",
-      "    \"address\": \"0x6887246668a3b87F54DeB3b94Ba47a6f63F32985\"\n",
-      "  },\n",
-      "  \"l1_state_proposer\": {\n",
-      "    \"balance\": 121.95248974677227,\n",
-      "    \"address\": \"0x473300df21D047806A082244b417f96b32f13A33\"\n",
-      "  },\n",
-      "  \"l1_to_l2_inflight_withdrawals\": {\n",
-      "    \"balance\": 7540.957068646794,\n",
-      "    \"address\": \"https://dune.com/embeds/3939869/6626683/\"\n",
-      "  }\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Output balances as JSON\n",
     "json_txt = json.dumps(balances, indent=2)\n",
@@ -227,18 +148,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "JSON written\n",
-      "CSV appended\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "table_name = 'op_collective_balances'\n",
     "# Write JSON to file\n",
@@ -250,50 +162,28 @@
     "csv_output_file = f'outputs/{table_name}_history.csv'\n",
     "df.to_csv(csv_output_file, mode='a', header=not pd.io.common.file_exists(csv_output_file), index=False)\n",
     "\n",
-    "print(f\"CSV appended\")"
+    "print(f\"CSV appended\")\n",
+    "\n",
+    "# Write latest values to a separate CSV, replacing it on every run\n",
+    "latest_csv_file = f'outputs/latest_{table_name}.csv'\n",
+    "df.to_csv(latest_csv_file, index=False)\n",
+    "print(f\"Latest values written to {latest_csv_file}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dt              datetime64[ns]\n",
-       "timestamp       datetime64[ns]\n",
-       "address_type            object\n",
-       "address                 object\n",
-       "balance                float64\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Start Writing api_table_uploads.daily_op_collective_balances\n",
-      "Data loaded successfully to api_table_uploads.daily_op_collective_balances\n",
-      "Table 'daily_op_collective_balances' created or already exists.\n",
-      "Data appended to table 'daily_op_collective_balances' successfully.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "upload_table = f'daily_{table_name}'\n",
     "#BQ Upload\n",
