push unique txs

--- a/op_chains_tracking/clickhouse_builds/create_matviews.ipynb
+++ b/op_chains_tracking/clickhouse_builds/create_matviews.ipynb
@@ -10,6 +10,7 @@
     "mv_names = [\n",
     "        'erc20_transfers',\n",
     "        'native_eth_transfers',\n",
+    "        'daily_aggregate_transactions',\n",
     "        ]\n",
     "days_batch_size = 7\n",
     "\n",
@@ -28,6 +29,7 @@
     "sys.path.append(\"../../helper_functions\")\n",
     "import clickhouse_utils as ch\n",
     "import opstack_metadata_utils as ops\n",
+    "import goldsky_db_utils as gsb\n",
     "sys.path.pop()\n",
     "client = ch.connect_to_clickhouse_db()\n",
     "\n",
@@ -105,8 +107,26 @@
    "outputs": [],
    "source": [
     "def create_materialized_view(client, chain, mv_name):\n",
+    "    table_view_name = f'{chain}_{mv_name}'\n",
     "    full_view_name = f'{chain}_{mv_name}_mv'\n",
+    "    create_file_name = f'{mv_name}_create'\n",
+    "    print(full_view_name)\n",
     "    \n",
+    "    # Check if create file exists\n",
+    "    if not get_query_from_file(create_file_name):\n",
+    "        print(f\"Create file {create_file_name}.sql does not exist. Skipping creation.\")\n",
+    "    else:\n",
+    "        # Check if table already exists\n",
+    "        result = client.query(f\"SHOW TABLES LIKE '{table_view_name}'\")\n",
+    "        if result.result_rows:\n",
+    "            print(f\"Table {table_view_name} already exists. Skipping creation.\")\n",
+    "        else:\n",
+    "            # Create the table\n",
+    "            create_query = get_query_from_file(create_file_name)\n",
+    "            create_query = create_query.format(chain=chain, view_name=table_view_name)\n",
+    "            client.command(create_query)\n",
+    "            print(f\"Created table {table_view_name}\")\n",
+    "\n",
     "    # Check if view already exists\n",
     "    result = client.query(f\"SHOW TABLES LIKE '{full_view_name}'\")\n",
     "    if result.result_rows:\n",
@@ -114,7 +134,10 @@
     "        return\n",
     "\n",
     "    query_template = get_query_from_file(f'{mv_name}_mv')\n",
-    "    query = query_template.format(chain=chain, view_name=full_view_name)\n",
+    "    query = query_template.format(chain=chain, view_name=full_view_name, table_name = table_view_name)\n",
+    "    query = gsb.process_goldsky_sql(query)\n",
+    "    \n",
+    "    # print(query)\n",
     "    \n",
     "    client.command(query)\n",
     "    print(f\"Created materialized view {full_view_name}\")\n",
@@ -143,6 +166,7 @@
     "\n",
     "def backfill_data(client, chain, mv_name):\n",
     "    full_view_name = f'{chain}_{mv_name}_mv'\n",
+    "    full_table_name = f'{chain}_{mv_name}'\n",
     "    current_date = start_date\n",
     "    batch_size = datetime.timedelta(days=days_batch_size)\n",
     "\n",
@@ -172,10 +196,13 @@
     "                view_name=full_view_name,\n",
     "                chain=chain,\n",
     "                start_date=current_date,\n",
-    "                end_date=batch_end\n",
+    "                end_date=batch_end,\n",
+    "                table_name = full_table_name\n",
     "            )\n",
+    "            query = gsb.process_goldsky_sql(query)\n",
     "            \n",
     "            try:\n",
+    "                # print(query)\n",
     "                client.command(query)\n",
     "                \n",
     "                # Record the backfill\n",
@@ -249,11 +276,17 @@
    "source": [
     "def reset_materialized_view(client, chain, mv_name):\n",
     "    full_view_name = f'{chain}_{mv_name}_mv'\n",
+    "    table_name = f'{chain}_{mv_name}'\n",
     "\n",
     "    try:\n",
     "        # Drop the existing materialized view\n",
     "        client.command(f\"DROP TABLE IF EXISTS {full_view_name}\")\n",
+    "        # client.command(f\"DROP MATERIALIZED VIEW IF EXISTS {full_view_name}\")\n",
     "        print(f\"Dropped materialized view {full_view_name}\")\n",
+    "\n",
+    "        # Drop the existing materialized view\n",
+    "        client.command(f\"DROP TABLE IF EXISTS {table_name}\")\n",
+    "        print(f\"Dropped table {table_name}\")\n",
     "\n",
     "        # Recreate the materialized view using the existing function\n",
     "        create_materialized_view(client, chain, mv_name)\n",
@@ -282,7 +315,7 @@
    "outputs": [],
    "source": [
     "# # To reset a view\n",
-    "# reset_materialized_view(client, 'zora', 'erc20_transfers')"
+    "reset_materialized_view(client, 'op', 'daily_aggregate_transactions')"
    ]
   },
   {
