--- a/op_chains_tracking/clickhouse_builds/create_superchain_data_view.ipynb
+++ b/op_chains_tracking/clickhouse_builds/create_superchain_data_view.ipynb
@@ -103,7 +103,7 @@
     "]\n",
     "mv_dataset_types = [\n",
     "                # mvs\n",
-    "                 'erc20_transfers_mv','native_eth_transfers_mv'\n",
+    "                 'erc20_transfers_mv','native_eth_transfers_mv','daily_aggregate_transactions'\n",
     "                 ]\n",
     "dataset_types = native_dataset_types + mv_dataset_types\n",
     "print(dataset_types)\n",
