lol forgot to pr

--- a/op_chains_tracking/clickhouse_builds/create_matviews.ipynb
+++ b/op_chains_tracking/clickhouse_builds/create_matviews.ipynb
@@ -47,9 +47,6 @@
     "# Get Chain List\n",
     "chain_configs = ops.get_superchain_metadata_by_data_source('oplabs') # OPLabs db\n",
     "# chain_configs = chain_configs[chain_configs['chain_name'].isin('op','zora')]\n",
-    "# Start date for backfilling\n",
-    "start_date = datetime.date(2021, 1, 1)\n",
-    "end_date = datetime.date.today()\n",
     "\n",
     "if client is None:\n",
     "        client = ch.connect_to_clickhouse_db()\n",
@@ -71,7 +68,7 @@
     "chains = get_chain_names_from_df(chain_configs)\n",
     "\n",
     "# Start date for backfilling\n",
-    "start_date = datetime.date(2021, 1, 1)\n",
+    "start_date = datetime.date(2021, 11, 1)\n",
     "end_date = datetime.date.today() + datetime.timedelta(days=1)"
    ]
   },
@@ -113,7 +110,7 @@
     "    print(full_view_name)\n",
     "    \n",
     "    # Check if create file exists\n",
-    "    if not get_query_from_file(create_file_name):\n",
+    "    if not os.path.exists(f'mv_inputs/{create_file_name}.sql'):\n",
     "        print(f\"Create file {create_file_name}.sql does not exist. Skipping creation.\")\n",
     "    else:\n",
     "        # Check if table already exists\n",
@@ -185,6 +182,8 @@
     "        LIMIT 1\n",
     "        \"\"\"\n",
     "        result = client.query(check_query)\n",
+    "        # print(check_query)\n",
+    "        # print(result.result_rows)\n",
     "        #Check if data already exists\n",
     "        \n",
     "\n",
@@ -200,6 +199,8 @@
     "                table_name = full_table_name\n",
     "            )\n",
     "            query = gsb.process_goldsky_sql(query)\n",
+    "            \n",
+    "            # print(query)\n",
     "            \n",
     "            try:\n",
     "                # print(query)\n",
@@ -320,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
