--- a/op_chains_tracking/clickhouse_builds/create_matviews.ipynb
+++ b/op_chains_tracking/clickhouse_builds/create_matviews.ipynb
@@ -12,7 +12,7 @@
     "        'native_eth_transfers',\n",
     "        'daily_aggregate_transactions',\n",
     "        ]\n",
-    "days_batch_size = 7\n",
+    "set_days_batch_size = 7\n",
     "\n",
     "optimize_all = True"
    ]
@@ -26,6 +26,7 @@
     "import pandas as pd\n",
     "import sys\n",
     "import datetime\n",
+    "import time\n",
     "sys.path.append(\"../../helper_functions\")\n",
     "import clickhouse_utils as ch\n",
     "import opstack_metadata_utils as ops\n",
@@ -165,9 +166,13 @@
     "    full_view_name = f'{chain}_{mv_name}_mv'\n",
     "    full_table_name = f'{chain}_{mv_name}'\n",
     "    current_date = start_date\n",
-    "    batch_size = datetime.timedelta(days=days_batch_size)\n",
+    "    \n",
     "\n",
     "    while current_date < end_date:\n",
+    "        days_batch_size = set_days_batch_size\n",
+    "\n",
+    "        batch_size = datetime.timedelta(days=days_batch_size)\n",
+    "\n",
     "        batch_end = min(current_date + batch_size, end_date)\n",
     "        \n",
     "        # Check if this range has been backfilled\n",
@@ -201,25 +206,29 @@
     "            query = gsb.process_goldsky_sql(query)\n",
     "            \n",
     "            # print(query)\n",
-    "            \n",
-    "            try:\n",
-    "                # print(query)\n",
-    "                client.command(query)\n",
-    "                \n",
-    "                # Record the backfill\n",
-    "                track_query = f\"\"\"\n",
-    "                INSERT INTO backfill_tracking (chain, mv_name, start_date, end_date)\n",
-    "                VALUES ('{chain}', '{mv_name}', toDate('{current_date}'), toDate('{batch_end}'))\n",
-    "                \"\"\"\n",
-    "                client.command(track_query)\n",
-    "                \n",
-    "                print(f\"Backfilled data for {full_view_name} from {current_date} to {batch_end}\")\n",
+    "            attempts = 1\n",
+    "            while attempts < 3:\n",
+    "                try:\n",
+    "                    # print(query)\n",
+    "                    client.command(query)\n",
+    "                    \n",
+    "                    # Record the backfill\n",
+    "                    track_query = f\"\"\"\n",
+    "                    INSERT INTO backfill_tracking (chain, mv_name, start_date, end_date)\n",
+    "                    VALUES ('{chain}', '{mv_name}', toDate('{current_date}'), toDate('{batch_end}'))\n",
+    "                    \"\"\"\n",
+    "                    client.command(track_query)\n",
+    "                    \n",
+    "                    print(f\"Backfilled data for {full_view_name} from {current_date} to {batch_end}\")\n",
     "\n",
-    "                # Optimize the newly backfilled partition\n",
-    "                # optimize_partition(client, full_view_name, current_date, batch_end)\n",
+    "                    # Optimize the newly backfilled partition\n",
+    "                    # optimize_partition(client, full_view_name, current_date, batch_end)\n",
     "\n",
-    "            except Exception as e:\n",
-    "                print(f\"Error during backfill for {full_view_name} from {current_date} to {batch_end}: {str(e)}\")\n",
+    "                except Exception as e:\n",
+    "                    print(f\"Error during backfill for {full_view_name} from {current_date} to {batch_end}: {str(e)}\")\n",
+    "                    days_batch_size = 3\n",
+    "                    attempts += 1\n",
+    "                time.sleep(1)\n",
     "        else:\n",
     "            print(f\"Data already backfilled for {full_view_name} from {current_date} to {batch_end}. Skipping.\")\n",
     "            # if optimize_all:\n",
