push fixes to logic

--- a/op_chains_tracking/clickhouse_builds/create_matviews.ipynb
+++ b/op_chains_tracking/clickhouse_builds/create_matviews.ipynb
@@ -104,6 +104,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def set_optimize_on_insert(option_int = 1):\n",
+    "    client.command(f\"\"\"\n",
+    "        SET optimize_on_insert = {option_int};\n",
+    "        \"\"\")\n",
+    "    print(f\"Set optimize_on_insert = {option_int}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def create_materialized_view(client, chain, mv_name):\n",
     "    table_view_name = f'{chain}_{mv_name}'\n",
     "    full_view_name = f'{chain}_{mv_name}_mv'\n",
@@ -167,51 +180,51 @@
     "    full_table_name = f'{chain}_{mv_name}'\n",
     "    current_date = start_date\n",
     "    \n",
-    "\n",
     "    while current_date < end_date:\n",
+    "        attempts = 1\n",
+    "        is_success = 0\n",
     "        days_batch_size = set_days_batch_size\n",
-    "\n",
-    "        batch_size = datetime.timedelta(days=days_batch_size)\n",
-    "\n",
-    "        batch_end = min(current_date + batch_size, end_date)\n",
     "        \n",
-    "        # Check if this range has been backfilled\n",
-    "        check_query = f\"\"\"\n",
-    "        SELECT 1\n",
-    "        FROM backfill_tracking\n",
-    "        WHERE chain = '{chain}'\n",
-    "          AND mv_name = '{mv_name}'\n",
-    "        HAVING \n",
-    "              MIN(start_date) <= toDate('{current_date}')\n",
-    "          AND MAX(end_date) >= toDate('{batch_end}')\n",
-    "        LIMIT 1\n",
-    "        \"\"\"\n",
-    "        result = client.query(check_query)\n",
-    "        # print(check_query)\n",
-    "        # print(result.result_rows)\n",
-    "        #Check if data already exists\n",
-    "        \n",
+    "        while is_success == 0 & attempts < 3:\n",
+    "            batch_size = datetime.timedelta(days=days_batch_size)\n",
     "\n",
-    "\n",
-    "        if not result.result_rows:\n",
-    "            # No record of backfill, proceed\n",
-    "            query_template = get_query_from_file(f'{mv_name}_backfill')\n",
-    "            query = query_template.format(\n",
-    "                view_name=full_view_name,\n",
-    "                chain=chain,\n",
-    "                start_date=current_date,\n",
-    "                end_date=batch_end,\n",
-    "                table_name = full_table_name\n",
-    "            )\n",
-    "            query = gsb.process_goldsky_sql(query)\n",
+    "            batch_end = min(current_date + batch_size, end_date)\n",
     "            \n",
-    "            # print(query)\n",
-    "            attempts = 1\n",
-    "            while attempts < 3:\n",
+    "            # Check if this range has been backfilled\n",
+    "            check_query = f\"\"\"\n",
+    "            SELECT 1\n",
+    "            FROM backfill_tracking\n",
+    "            WHERE chain = '{chain}'\n",
+    "            AND mv_name = '{mv_name}'\n",
+    "            HAVING \n",
+    "                MIN(start_date) <= toDate('{current_date}')\n",
+    "            AND MAX(end_date) >= toDate('{batch_end}')\n",
+    "            LIMIT 1\n",
+    "            \"\"\"\n",
+    "            result = client.query(check_query)\n",
+    "            # print(check_query)\n",
+    "            # print(result.result_rows)\n",
+    "            #Check if data already exists\n",
+    "            \n",
+    "\n",
+    "\n",
+    "            if not result.result_rows:\n",
+    "                # No record of backfill, proceed\n",
+    "                query_template = get_query_from_file(f'{mv_name}_backfill')\n",
+    "                query = query_template.format(\n",
+    "                    view_name=full_view_name,\n",
+    "                    chain=chain,\n",
+    "                    start_date=current_date,\n",
+    "                    end_date=batch_end,\n",
+    "                    table_name = full_table_name\n",
+    "                )\n",
+    "                query = gsb.process_goldsky_sql(query)\n",
+    "                \n",
+    "                # print(query)\n",
     "                try:\n",
     "                    # print(query)\n",
+    "                    set_optimize_on_insert()\n",
     "                    client.command(query)\n",
-    "                    \n",
     "                    # Record the backfill\n",
     "                    track_query = f\"\"\"\n",
     "                    INSERT INTO backfill_tracking (chain, mv_name, start_date, end_date)\n",
@@ -223,19 +236,19 @@
     "\n",
     "                    # Optimize the newly backfilled partition\n",
     "                    # optimize_partition(client, full_view_name, current_date, batch_end)\n",
-    "\n",
+    "                    is_success = 1\n",
     "                except Exception as e:\n",
     "                    print(f\"Error during backfill for {full_view_name} from {current_date} to {batch_end}: {str(e)}\")\n",
-    "                    days_batch_size = 3\n",
+    "                    days_batch_size = 1\n",
     "                    attempts += 1\n",
     "                time.sleep(1)\n",
-    "        else:\n",
-    "            print(f\"Data already backfilled for {full_view_name} from {current_date} to {batch_end}. Skipping.\")\n",
-    "            # if optimize_all:\n",
-    "            #     optimize_partition(client, full_view_name, current_date, batch_end)\n",
-    "        \n",
-    "        \n",
-    "        current_date = batch_end + datetime.timedelta(days=1)\n",
+    "            else:\n",
+    "                print(f\"Data already backfilled for {full_view_name} from {current_date} to {batch_end}. Skipping.\")\n",
+    "                is_success = 1\n",
+    "                # if optimize_all:\n",
+    "                #     optimize_partition(client, full_view_name, current_date, batch_end)\n",
+    "\n",
+    "            current_date = batch_end + datetime.timedelta(days=1)\n",
     "\n",
     "# def optimize_partition(client, full_view_name, start_date, end_date):\n",
     "#     # First, let's get the actual partition names\n",
@@ -310,12 +323,7 @@
     "        print(f\"Cleared backfill tracking for {full_view_name}\")\n",
     "\n",
     "    except Exception as e:\n",
-    "        print(f\"Error resetting materialized view {full_view_name}: {str(e)}\")\n",
-    "def set_backfill_on_insert(option_int = 1):\n",
-    "    client.command(f\"\"\"\n",
-    "        SET optimize_on_insert = {option_int};\n",
-    "        \"\"\")\n",
-    "    print(f\"Set optimize_on_insert = {option_int}\")\n"
+    "        print(f\"Error resetting materialized view {full_view_name}: {str(e)}\")\n"
    ]
   },
   {
@@ -325,18 +333,17 @@
    "outputs": [],
    "source": [
     "# # To reset a view\n",
-    "reset_materialized_view(client, 'op', 'daily_aggregate_transactions')"
+    "# reset_materialized_view(client, 'op', 'daily_aggregate_transactions')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Main execution\n",
     "ensure_backfill_tracking_table_exists(client)\n",
-    "set_backfill_on_insert()\n",
     "\n",
     "for chain in chains:\n",
     "    print(f\"Processing chain: {chain}\")\n",
