--- a/op_chains_tracking/dune_op_stack_chains_l1_data.ipynb
+++ b/op_chains_tracking/dune_op_stack_chains_l1_data.ipynb
@@ -30,7 +30,8 @@
    },
    "outputs": [],
    "source": [
-    "trailing_days = 180 #Assume we always catch chains within 6 months"
+    "trailing_days = 180 #Assume we always catch chains within 6 months\n",
+    "chain_layers = ['ethereum','base']"
    ]
   },
   {
@@ -43,14 +44,22 @@
    "source": [
     "# Run Dune\n",
     "print('     dune runs')\n",
+    "dune_dfs=[]\n",
+    "\n",
     "days_param = d.generate_query_parameter(input=trailing_days,field_name='trailing_days',dtype='number')\n",
-    "dune_df = d.get_dune_data(query_id = 3912454, #https://dune.com/queries/3912454\n",
-    "    name = \"daily_op_stack_chains_l1_data\",\n",
-    "    path = \"outputs\",\n",
-    "    performance=\"large\",\n",
-    "    params = [days_param],\n",
-    "    num_hours_to_rerun=0 #always rereun\n",
-    ")\n",
+    "for chain in chain_layers:\n",
+    "    chain_param = d.generate_query_parameter(input=chain,field_name='blockchain',dtype='text')\n",
+    "    int_df = d.get_dune_data(query_id = 3912454, #https://dune.com/queries/3912454\n",
+    "        name = \"daily_op_stack_chains_l1_data\",\n",
+    "        path = \"outputs\",\n",
+    "        performance=\"large\",\n",
+    "        params = [days_param, chain_param],\n",
+    "        num_hours_to_rerun=0 #always rereun\n",
+    "    )\n",
+    "    dune_dfs.append(int_df)\n",
+    "\n",
+    "dune_df = pd.concat(dune_dfs)\n",
+    "\n",
     "dune_df['source'] = 'dune'\n",
     "dune_df['dt'] = pd.to_datetime(dune_df['dt']).dt.tz_localize(None)"
    ]
@@ -72,7 +81,7 @@
    "outputs": [],
    "source": [
     "#BQ Upload\n",
-    "bqu.append_and_upsert_df_to_bq_table(dune_df, 'daily_op_stack_chains_l1_data', unique_keys = ['chain_id','dt','name'])"
+    "bqu.append_and_upsert_df_to_bq_table(dune_df, 'daily_op_stack_chains_l1_data', unique_keys = ['chain_id','dt','name','output_layer','da_layer'])"
    ]
   }
  ],
