--- a/op_chains_tracking/dune_op_stack_chains_l1_data.ipynb
+++ b/op_chains_tracking/dune_op_stack_chains_l1_data.ipynb
@@ -81,7 +81,7 @@
    "outputs": [],
    "source": [
     "#BQ Upload\n",
-    "bqu.append_and_upsert_df_to_bq_table(dune_df, 'daily_op_stack_chains_l1_data', unique_keys = ['chain_id','dt','name','output_layer','da_layer'])"
+    "bqu.append_and_upsert_df_to_bq_table(dune_df, 'daily_op_stack_chains_l1_data', unique_keys = ['chain_id','dt','name','output_root_data_source','data_availability_data_source'])"
    ]
   }
  ],
